# fastapi-docker-template

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/controllers/: index_controller.py
