[tool.poetry]
name = "fastapi-docker-template"
version = "0.1.0"
description = "Template for creating containerized fastapi applications"
authors = ["savioacp <savioacp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
